--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -67,13 +67,13 @@
             android:theme="@style/home_theme" />
 
         <activity
-            android:name=".IntroActivity"
+            android:name=".Intro_Pages"
             android:theme="@style/home_theme" />
         <activity
             android:name=".AskRole"
             android:theme="@style/home_theme" />
         <activity
-            android:name=".SignIn_Doctor"
+            android:name=".doctor.SignIn_Doctor"
             android:theme="@style/home_theme" />
         <activity
             android:name=".doctor.Doctors"
@@ -99,7 +99,7 @@
             android:name=".Chat_Windo"
             android:theme="@style/home_theme" />
         <activity
-            android:name=".Home"
+            android:name=".Splash_Activity"
             android:exported="true"
             android:theme="@style/home_theme">
             <intent-filter>
